--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "install": "^0.13.0",
+    "jspdf": "^2.5.1",
     "mdb-react-ui-kit": "^6.0.0",
     "npm": "^9.6.4",
     "react": "^18.2.0",
